# bring-a-crew

./: .gitignore  README.md  pyproject.toml  run_orchestration.py
bring_a_crew/: action_agent.py  basic_agent.py  food_manager_action_agent.py  learn_agent.ipynb  learn_llm.ipynb  learn_reasoning.ipynb  orchestration_agent.py  room_manager_action_agent.py  schedule_manager_action_agent.py  setup_logging.py  understand_llm.py
